# rpel

./: Cargo.toml  README.md
migrate/: 1_add_fullname_to_companies.sql  2_rename_fullname_to_full_name.sql
sql/: certificate.sql  company.sql  contacts.sql  department.sql  education.sql  email.sql  hideout_type.sql  kind.sql  migrate siren.sql  phone.sql  post.sql  practice.sql  rank.sql  scope.sql  siren.sql  siren_type.sql  user.sql
src/: certificate.rs  company.rs  contact.rs  department.rs  education.rs  email.rs  error.rs  hideout.rs  hideout_type.rs  kind.rs  lib.rs  phone.rs  post.rs  practice.rs  rank.rs  scope.rs  select.rs  siren.rs  siren_type.rs  tcc.rs  user.rs
