[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "rpel"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
deadpool-postgres = "0.5"
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio-postgres = {version = "0.5", features = ["with-chrono-0_4"]}
