[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "rpel"
version = "0.4.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
deadpool-postgres = {version = "0.9", features = ["rt_tokio_1"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}

[profile.dev.build-override]
codegen-units = 1
opt-level = 3
