[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2021"
name = "rpel"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
config = "0.11"
deadpool-postgres = {version = "0.10", features = ["rt_tokio_1", "serde"]}
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}
